FDG-6271 Fixed header spacing and x-axis.

--- a/src/layouts/explainer/sections/national-debt/debt-over-last-100y-linechart/debt-over-last-100y-linechart.module.scss
+++ b/src/layouts/explainer/sections/national-debt/debt-over-last-100y-linechart/debt-over-last-100y-linechart.module.scss
@@ -71,6 +71,7 @@
 
       div {
         text-align: center;
+        min-width: 110px !important;
         
           .header {
             font-size: $font-size-24;
